--- a/index.html
+++ b/index.html
@@ -11,73 +11,71 @@
   <style>
     /* ---------- Reset & Base ---------- */
     :root{
-      --text:#374151;
+      --sidebar-bg:#f0f0f0;
+      --text:#333333;
       --muted:#6b7280;
-      --accent:#1e40af;
-      --sidebar-bg:#f3f4f6;
       --card-bg:#ffffff;
+      --accent:#1e40af;
     }
     *{box-sizing:border-box}
-    html,body{height:100%;margin:0;padding:0;font-family:'Segoe UI', Tahoma, Arial, sans-serif; background:#f8fafc;color:var(--text); -webkit-font-smoothing:antialiased; direction:ltr;}
+    html,body{height:100%;margin:0;padding:0;font-family: 'Segoe UI', Tahoma, Arial; background:#f8fafc;color:var(--text); -webkit-font-smoothing:antialiased; direction:ltr;}
     a{color:var(--accent); text-decoration:none;}
     a:hover{text-decoration:underline}
 
     /* ---------- Layout ---------- */
     .layout{display:flex;min-height:100vh;}
 
-    /* ---------- Sidebar (Professional) ---------- */
+    /* Sidebar (header on left) */
     .sidebar{
       width:280px;
       background:var(--sidebar-bg);
-      padding:30px 20px;
+      padding:28px 20px;
       position:fixed;
       left:0; top:0; bottom:0;
-      overflow-y:auto;
-      border-right:1px solid #d1d5db;
-      color:var(--text);
+      overflow:auto;
+      border-right:1px solid rgba(0,0,0,0.04);
+      font-family: 'Segoe UI', Tahoma, Arial;
     }
-    .sidebar-header{text-align:center;margin-bottom:30px;}
-    .sidebar-header .photo{
-      width:120px; height:120px;
-      border-radius:50%; object-fit:cover;
-      border:3px solid #e5e7eb;
-      box-shadow:0 6px 16px rgba(0,0,0,0.08);
-      margin-bottom:12px;
+    .photo{
+      width:128px;height:128px;border-radius:50%;object-fit:cover;border:3px solid #eaeefb; display:block;margin:0 auto 14px;
+      box-shadow:0 8px 20px rgba(16,24,40,0.06);
     }
-    .sidebar-header .name{
-      font-weight:700; font-size:1.25rem; color:#111827; line-height:1.3; margin-bottom:4px;
-    }
-    .sidebar-header .title{
-      font-size:0.9rem; color:var(--muted); line-height:1.4; margin:0 auto;
-    }
-    .sidebar-section{margin-bottom:28px;}
-    .sidebar-section h4{
-      font-size:0.95rem; font-weight:600; color:#111827;
-      border-bottom:1px solid #d1d5db; padding-bottom:6px; margin-bottom:12px;
-    }
-    .sidebar-section ul{list-style:none;padding:0;margin:0;}
-    .sidebar-section ul li{margin-bottom:8px;font-size:0.95rem;line-height:1.5;color:var(--text);}
-    .sidebar-section ul li a{color:#4b5563;text-decoration:none;}
-    .sidebar-section ul li a:hover{color:var(--accent);text-decoration:underline;}
-    .sidebar::-webkit-scrollbar{width:6px;}
-    .sidebar::-webkit-scrollbar-thumb{background-color:rgba(107,114,128,0.5);border-radius:3px;}
-    .sidebar::-webkit-scrollbar-track{background:transparent;}
+    .name{ text-align:center; font-weight:700; font-size:1.15rem; color:#111827; margin-bottom:8px; line-height:1.35;}
+    .title{ text-align:center; color:var(--muted); font-size:0.95rem; margin:0 0 14px; line-height:1.6; padding:0 6px;}
+    .contact{ font-size:0.88rem; color:var(--text); margin-top:14px; margin-bottom:20px; line-height:1.6; text-align:center;}
+    .contact a{color:var(--accent)}
+    hr.sep{border:none;height:1px;background:rgba(0,0,0,0.04); margin:18px 0}
+
+    .sidebar h4{font-size:0.95rem;color:#111827;margin:12px 0 8px}
+    .skill-list{font-size:0.92rem;color:var(--text);line-height:1.6}
 
     /* ---------- Top Navbar (outside sidebar) ---------- */
     .topnav{
-      position:fixed; left:280px; right:0; top:0;
-      height:56px; background:#ffffff;
+      position:fixed;
+      left:280px; right:0; top:0;
+      height:56px;
+      background:#ffffff;
       border-bottom:1px solid rgba(0,0,0,0.04);
-      display:flex; align-items:center; gap:18px;
-      padding:0 28px; z-index:40;
+      display:flex;
+      align-items:center;
+      gap:18px;
+      padding:0 28px;
+      z-index:40;
     }
-    .topnav a{color:var(--text); font-weight:600; padding:6px 10px; border-radius:6px; transition:all .18s; text-decoration:none;}
+    .topnav a{
+      color:var(--text);
+      font-weight:600;
+      padding:6px 10px;
+      border-radius:6px;
+      transition:all .18s;
+      text-decoration:none;
+    }
     .topnav a:hover{color:var(--accent); background:rgba(30,64,175,0.04)}
 
     /* ---------- Content ---------- */
     .content{
       margin-left:280px;
-      padding:90px 40px 60px 40px; 
+      padding:90px 40px 60px 40px; /* leave space for topnav */
       width:calc(100% - 280px);
     }
     section{margin-bottom:34px}
@@ -103,16 +101,7 @@
     .project-meta{color:var(--muted);font-size:0.95rem;margin-bottom:8px}
     .project-link{font-weight:600;color:var(--accent);font-size:0.95rem}
 
-    /* Carousel */
-    .carousel { position:relative; overflow:hidden; max-width:900px; margin:0 auto; }
-    .carousel-track { display:flex; transition:transform 0.5s ease-in-out; }
-    .carousel-item { flex:0 0 260px; margin-right:1rem; border-radius:8px; overflow:hidden; }
-    .carousel-item img { width:100%; height:180px; object-fit:cover; transition:0.3s; }
-    .carousel-item img:hover { transform:scale(1.05); }
-    .carousel-btn { position:absolute; top:50%; transform:translateY(-50%); background:#6b7280; color:white; border:none; padding:8px 12px; border-radius:50%; cursor:pointer; font-size:1.5rem; transition:0.3s; }
-    .carousel-btn:hover { background:#4b5563; }
-    .carousel-btn.left { left:10px; }
-    .carousel-btn.right { right:10px; }
+    /* Carousel removed for Certificates (now using modal gallery) */
 
     /* Responsive */
     @media (max-width:900px){
@@ -125,35 +114,31 @@
 <body>
 
   <div class="layout">
-    <!-- SIDEBAR -->
+    <!-- SIDEBAR (header on left) -->
     <aside class="sidebar" role="complementary">
-      <div class="sidebar-header">
-        <img class="photo" src="images/profile.jpg" alt="Elnaz Abbasifar">
-        <div class="name">Elnaz Abbasifar</div>
-        <p>PhD Applicant | Machine Learning | Data Management | Health Informatics<br></p>
-        <div class="title">M.Sc. in IT Management (Advanced Information Systems)<br>B.Sc. Computer Engineering (Software)</div>
+      <img class="photo" src="images/profile.jpg" alt="Elnaz Abbasifar">
+      <div class="name">Elnaz Abbasifar</div>
+      <div class="title">M.Sc. in IT Management (Advanced Information Systems) — B.Sc. Computer Engineering (Software)</div>
+
+      <div class="contact">
+        <div><strong>Email:</strong> <a href="mailto:e.abbasifar@outlook.com">e.abbasifar@outlook.com</a></div>
+        <div><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/elnazabbasifar/" target="_blank">linkedin.com/in/elnazabbasifar</a></div>
+        <div><strong>GitHub:</strong> <a href="https://github.com/elnazabbasifar" target="_blank">github.com/elnazabbasifar</a></div>
       </div>
 
-      <div class="sidebar-section">
-        <h4>Contact</h4>
-        <ul>
-          <li><strong>Email:</strong> <a href="mailto:e.abbasifar@outlook.com">e.abbasifar@outlook.com</a></li>
-          <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/elnazabbasifar/" target="_blank">linkedin.com/in/elnazabbasifar</a></li>
-          <li><strong>GitHub:</strong> <a href="https://github.com/elnazabbasifar" target="_blank">github.com/elnazabbasifar</a></li>
-        </ul>
-      </div>
+      <hr class="sep">
 
-      <div class="sidebar-section">
-        <h4>Skills</h4>
-        <ul>
-          <li><strong>Programming:</strong> Python, C#, SQL</li>
-          <li><strong>Data & ML Libraries:</strong> NumPy, Pandas, Matplotlib, Seaborn, Scikit-learn, PyTorch Geometric</li>
+      <h4>Skills</h4>
+      <div class="skill-list">
+        <ul style="padding-left:1rem;margin:0">
+          <li><strong>Programming & Scripting:</strong> Python, C#, SQL</li>
+          <li><strong>Data Science & ML Libraries:</strong> NumPy, Pandas, Matplotlib, Seaborn, Scikit-learn, PyTorch Geometric</li>
           <li><strong>Tools & Platforms:</strong> SQL Server, Power BI, Git, Jupyter, Visual Studio, Google Colab</li>
         </ul>
       </div>
     </aside>
 
-    <!-- TOP NAV -->
+    <!-- TOP NAV (outside sidebar) -->
     <header class="topnav" role="navigation" aria-label="Top navigation">
       <a href="#academic">Academic</a>
       <a href="#publications">Publications</a>
@@ -166,7 +151,7 @@
     <!-- MAIN CONTENT -->
     <main class="content" role="main">
 
-      <!-- Academic Background -->
+      <!-- Academic Background & Training -->
       <section id="academic" data-aos="fade-up">
         <h2 class="section-title">Academic Background & Training</h2>
         <div class="card" data-aos="zoom-in">
@@ -182,12 +167,14 @@
       <!-- Publications -->
       <section id="publications" data-aos="fade-up">
         <h2 class="section-title">Publications</h2>
+
         <div class="card pub-card" data-aos="fade-up" data-aos-delay="40">
           <div class="pub-item">
             <div><b>E. Abbasifar, A. Shayan</b></div>
             <div class="muted">The Impact of Social Network Applications on Customer Trust in Small Businesses with the Mediating Role of Brand Reputation: A Structural Equations Modeling Approach (Case Study: Modiseh Online Store). 2nd International Conference on Interdisciplinary Studies in Management & Engineering, University of Tehran, 2020.</div>
           </div>
         </div>
+
         <div class="card pub-card" data-aos="fade-up" data-aos-delay="80">
           <div class="pub-item">
             <div><b>E. Abbasifar</b></div>
@@ -199,6 +186,7 @@
       <!-- Research Experience -->
       <section id="research" data-aos="fade-right">
         <h2 class="section-title">Research Experience</h2>
+
         <div class="card" data-aos="zoom-in" data-aos-delay="60">
           <div style="font-weight:700">AI Researcher — Technology Studies Institute, Tehran, Iran (Feb – Sep 2021)</div>
           <ul class="clean">
@@ -206,6 +194,7 @@
             <li>Collaborated with interdisciplinary scientists to integrate insights across computer science, policy, and management.</li>
           </ul>
         </div>
+
         <div class="card" data-aos="zoom-in" data-aos-delay="100">
           <div style="font-weight:700">Graduate Researcher (Master’s Thesis) — Payame Noor University, Tehran, Iran (2016 – 2018)</div>
           <ul class="clean">
@@ -214,60 +203,40 @@
         </div>
       </section>
 
-      <!-- Certificates Section -->
-      <section id="certificates" class="py-16 bg-white">
-        <div class="max-w-6xl mx-auto px-4">
-          <h2 class="text-3xl font-bold text-gray-800 mb-8 text-center">Certificates</h2>
-          
-          <!-- Gallery -->
-          <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-            <div>
-              <img src="images/certificates/cert1.jpg" alt="Certificate 1" 
-                   class="rounded-lg shadow-md cursor-pointer hover:scale-105 transition transform duration-300"
-                   onclick="openModal(this)">
-            </div>
-            <div>
-              <img src="images/certificates/cert2.jpg" alt="Certificate 2" 
-                   class="rounded-lg shadow-md cursor-pointer hover:scale-105 transition transform duration-300"
-                   onclick="openModal(this)">
-            </div>
-            <div>
-              <img src="images/certificates/cert3.jpg" alt="Certificate 3" 
-                   class="rounded-lg shadow-md cursor-pointer hover:scale-105 transition transform duration-300"
-                   onclick="openModal(this)">
-            </div>
-            <div>
-              <img src="images/certificates/cert4.jpg" alt="Certificate 4" 
-                   class="rounded-lg shadow-md cursor-pointer hover:scale-105 transition transform duration-300"
-                   onclick="openModal(this)">
-            </div>
-            <div>
-              <img src="images/certificates/cert5.jpg" alt="Certificate 5" 
-                   class="rounded-lg shadow-md cursor-pointer hover:scale-105 transition transform duration-300"
-                   onclick="openModal(this)">
-            </div>
-          </div>
+      <!-- Certificates Section (Professional Modal Gallery) -->
+      <section id="certificates" data-aos="fade-up">
+        <h2 class="section-title">Certificates</h2>
+        <div class="cert-gallery" style="display:flex; flex-direction:column; gap:16px; max-width:600px; margin:0 auto;">
+          <img src="images/cert1.jpg" alt="Certificate 1" class="cert-thumb" onclick="openModal(this)" style="width:100%; border-radius:8px; cursor:pointer; box-shadow:0 4px 12px rgba(0,0,0,0.1); transition:0.3s;">
+          <img src="images/cert2.jpg" alt="Certificate 2" class="cert-thumb" onclick="openModal(this)" style="width:100%; border-radius:8px; cursor:pointer; box-shadow:0 4px 12px rgba(0,0,0,0.1); transition:0.3s;">
+          <img src="images/cert3.jpg" alt="Certificate 3" class="cert-thumb" onclick="openModal(this)" style="width:100%; border-radius:8px; cursor:pointer; box-shadow:0 4px 12px rgba(0,0,0,0.1); transition:0.3s;">
+          <img src="images/cert4.jpg" alt="Certificate 4" class="cert-thumb" onclick="openModal(this)" style="width:100%; border-radius:8px; cursor:pointer; box-shadow:0 4px 12px rgba(0,0,0,0.1); transition:0.3s;">
+          <img src="images/cert5.jpg" alt="Certificate 5" class="cert-thumb" onclick="openModal(this)" style="width:100%; border-radius:8px; cursor:pointer; box-shadow:0 4px 12px rgba(0,0,0,0.1); transition:0.3s;">
         </div>
       </section>
 
       <!-- Projects -->
       <section id="projects" data-aos="zoom-in">
         <h2 class="section-title">Projects</h2>
+
         <div class="card" data-aos="fade-up" data-aos-delay="60">
           <div class="project-title">Tree-Structured Graph Classification with GNN — 2025</div>
           <div class="project-meta">A GCN using PyTorch Geometric to classify tree graphs.</div>
           <div class="project-link"><a href="#" target="_blank">GitHub Project Link</a></div>
         </div>
+
         <div class="card" data-aos="fade-up" data-aos-delay="100">
           <div class="project-title">Precision in Cardiovascular Risk Prediction: A Lasso Regression Approach — ShineTech, 2023</div>
           <div class="project-meta">A Lasso Regression model for cardiovascular risk prediction.</div>
           <div class="project-link"><a href="#" target="_blank">GitHub Project Link</a></div>
         </div>
+
         <div class="card" data-aos="fade-up" data-aos-delay="140">
           <div class="project-title">Advanced Prediction using Ensemble Learning Techniques — ShineTech, 2023</div>
           <div class="project-meta">Mobile price prediction models using Decision Trees and Random Forest.</div>
           <div class="project-link"><a href="#" target="_blank">GitHub Project Link</a></div>
         </div>
+
         <div class="card" data-aos="fade-up" data-aos-delay="180">
           <div class="project-title">EDA Seattle Area Traffic Collision Data — Data Circles, 2020</div>
           <div class="project-meta">During Data Circles workshop, we analyzed Seattle traffic collision data to help prioritize road improvements and prevent future collisions through Exploratory Data Analysis (EDA).</div>
@@ -278,6 +247,7 @@
       <!-- Work Experience -->
       <section id="work" data-aos="fade-right">
         <h2 class="section-title">Work Experience</h2>
+
         <div class="card" data-aos="fade-up" data-aos-delay="60">
           <div style="font-weight:700">BPM Data Analyst — Pegah Aftab, Tehran, Iran (Apr 2021 – Present)</div>
           <ul class="clean">
@@ -285,18 +255,21 @@
             <li>Analyzed workflows and authored technical documentation to support process optimization.</li>
           </ul>
         </div>
+
         <div class="card" data-aos="fade-up" data-aos-delay="100">
           <div style="font-weight:700">BI Developer — Pegah Aftab, Tehran, Iran (Jun – Dec 2024)</div>
           <ul class="clean">
             <li>Developed interactive dashboards in Power BI to visualize key performance metrics and support decision-making.</li>
           </ul>
         </div>
+
         <div class="card" data-aos="fade-up" data-aos-delay="140">
           <div style="font-weight:700">Data Science Intern (Python) — T25 Company, Tehran, Iran (Nov 2020 – Jan 2021)</div>
           <ul class="clean">
             <li>Developed Python scripts to automate data collection, processing, and analysis.</li>
           </ul>
         </div>
+
         <div class="card" data-aos="fade-up" data-aos-delay="180">
           <div style="font-weight:700">SQL Developer / BPM Developer — Payam Mashregh, Esfahan, Iran (2014 – 2017)</div>
           <ul class="clean">
@@ -309,21 +282,36 @@
     </main>
   </div>
 
-  <!-- Modal for full-size image -->
-<div id="imgModal" class="fixed inset-0 bg-black bg-opacity-80 hidden flex items-center justify-center z-50">
-  <span class="absolute top-5 right-8 text-white text-3xl cursor-pointer" onclick="closeModal()">&times;</span>
-  <img id="modalImage" class="max-h-[90%] max-w-[90%] rounded-lg shadow-lg">
-</div>
+  <!-- Modal for full-size certificate image -->
+  <div id="imgModal" class="fixed inset-0 bg-black bg-opacity-80 hidden items-center justify-center z-50">
+    <span class="absolute top-5 right-8 text-white text-3xl cursor-pointer" onclick="closeModal()">&times;</span>
+    <img id="modalImage" class="max-h-[90%] max-w-[90%] rounded-lg shadow-lg">
+  </div>
 
-<script>
-  function openModal(imgElement) {
-    document.getElementById("imgModal").style.display = "flex";
-    document.getElementById("modalImage").src = imgElement.src;
-  }
-  function closeModal() {
-    document.getElementById("imgModal").style.display = "none";
-  }
-</script>
+  <script>
+    // Scroll animation
+    function scrollAnimation() {
+      const elements = document.querySelectorAll('[data-animate]');
+      const triggerBottom = window.innerHeight * 0.85;
+      elements.forEach(el => {
+        const boxTop = el.getBoundingClientRect().top;
+        if(boxTop < triggerBottom) el.classList.add('active');
+      });
+    }
+    window.addEventListener('scroll', scrollAnimation);
+    window.addEventListener('load', scrollAnimation);
+
+    // Modal functions
+    function openModal(imgElement) {
+      document.getElementById("imgModal").classList.remove("hidden");
+      document.getElementById("imgModal").classList.add("flex");
+      document.getElementById("modalImage").src = imgElement.src;
+    }
+    function closeModal() {
+      document.getElementById("imgModal").classList.add("hidden");
+      document.getElementById("imgModal").classList.remove("flex");
+    }
+  </script>
 
 </body>
 </html>
