--- a/index.html
+++ b/index.html
@@ -1,160 +1,289 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Elnaz Abbasifar</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    /* Certificates carousel */
-    .certificate-carousel {
-      position: relative;
-      overflow: hidden;
-      width: 100%;
-      max-width: 600px;
-      margin: auto;
-    }
-    .certificate-wrapper {
-      display: flex;
-      transition: transform 0.6s ease-in-out;
-    }
-    .certificate-slide {
-      min-width: 100%;
-      flex-shrink: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    .certificate-slide img {
-      max-height: 400px;
-      object-fit: contain;
-    }
-    .carousel-btn {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      background: rgba(0,0,0,0.5);
-      color: #fff;
-      border: none;
-      font-size: 2rem;
-      padding: 0.3rem 0.7rem;
-      cursor: pointer;
-      border-radius: 50%;
-      transition: background 0.3s;
-    }
-    .carousel-btn:hover {
-      background: rgba(0,0,0,0.8);
-    }
-    .carousel-btn.left { left: 10px; }
-    .carousel-btn.right { right: 10px; }
 
-    /* Responsive sidebar + layout */
-    @media (max-width: 768px) {
-      .mobile-col {
-        flex-direction: column;
-      }
-      .sidebar {
-        width: 100% !important;
-        text-align: center;
-      }
-      .content {
-        width: 100% !important;
-      }
+  <!-- AOS CSS -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+  <style>
+    /* ---------- Reset & Base ---------- */
+    :root{
+      --text:#374151;
+      --muted:#6b7280;
+      --accent:#1e40af;
+      --sidebar-bg:#f3f4f6;
+      --card-bg:#ffffff;
+    }
+    *{box-sizing:border-box}
+    html,body{margin:0;padding:0;font-family:'Segoe UI', Tahoma, Arial, sans-serif;background:#f8fafc;color:var(--text);}
+    a{color:var(--accent); text-decoration:none;}
+    a:hover{text-decoration:underline}
+
+    /* ---------- Layout ---------- */
+    .layout{display:flex;min-height:100vh;}
+
+    /* ---------- Sidebar ---------- */
+    .sidebar{
+      width:260px;
+      background:var(--sidebar-bg);
+      padding:20px;
+      position:fixed;
+      left:0; top:0; bottom:0;
+      overflow-y:auto;
+      border-right:1px solid #d1d5db;
+    }
+    .sidebar-header{text-align:center;margin-bottom:20px;}
+    .sidebar-header .photo{
+      width:100px; height:100px;
+      border-radius:50%; object-fit:cover;
+      border:3px solid #e5e7eb;
+      margin-bottom:10px;
+    }
+    .sidebar-section{margin-bottom:20px;}
+    .sidebar-section h4{
+      font-size:0.9rem; font-weight:600; color:#111827;
+      border-bottom:1px solid #d1d5db; padding-bottom:6px; margin-bottom:10px;
+    }
+    .sidebar-section ul{list-style:none;padding:0;margin:0;}
+    .sidebar-section ul li{margin-bottom:8px;font-size:0.9rem;color:var(--text);}
+
+    /* ---------- Top Navbar ---------- */
+    .topnav{
+      position:fixed; left:260px; right:0; top:0;
+      height:56px; background:#111827;
+      display:flex; align-items:center; gap:20px;
+      padding:0 28px; z-index:40;
+    }
+    .topnav a{color:#f9fafb;font-weight:600; padding:6px 10px; border-radius:6px; transition:all .18s;}
+    .topnav a:hover{background:#1e3a8a;}
+
+    /* ---------- Content ---------- */
+    .content{
+      margin-left:260px;
+      padding:80px 30px 50px 30px; 
+      width:calc(100% - 260px);
+    }
+    section{margin-bottom:34px}
+    h2.section-title{font-size:1.2rem;color:#111827;margin:0 0 12px;font-weight:700}
+    .card{
+      background:var(--card-bg);
+      border-radius:12px;
+      padding:18px;
+      box-shadow:0 6px 20px rgba(0,0,0,0.05);
+      margin-bottom:12px;
+    }
+    .muted{color:var(--muted);font-size:0.95rem}
+    ul.clean{margin:10px 0 0 0; padding-left:1.1rem}
+    ul.clean li{margin:8px 0;line-height:1.5;color:var(--text);font-size:0.95rem}
+
+    /* ---------- About Section ---------- */
+    .about-wrapper{display:flex;align-items:center;gap:30px;flex-wrap:wrap;}
+    .about-wrapper img{
+      width:160px; height:160px; border-radius:50%; object-fit:cover;
+      box-shadow:0 6px 16px rgba(0,0,0,0.1);
+    }
+    .about-text{flex:1; font-size:1rem; line-height:1.6; color:var(--text);}
+
+    /* ---------- Certificates Carousel ---------- */
+    .carousel { position:relative; overflow:hidden; max-width:700px; margin:0 auto; }
+    .carousel-track { display:flex; transition:transform 0.5s ease-in-out; }
+    .carousel-item { flex:0 0 100%; border-radius:8px; overflow:hidden; }
+    .carousel-item img { width:100%; height:auto; object-fit:contain; cursor:pointer; }
+
+    .carousel-btn { position:absolute; top:50%; transform:translateY(-50%); 
+      background:#374151; color:white; border:none; padding:10px; border-radius:50%; 
+      cursor:pointer; font-size:1.4rem; transition:0.3s; }
+    .carousel-btn:hover { background:#1f2937; }
+    .carousel-btn.left { left:10px; }
+    .carousel-btn.right { right:10px; }
+
+    /* Modal */
+    .modal{display:none;position:fixed;z-index:1000;top:0;left:0;width:100%;height:100%;
+      background:rgba(0,0,0,0.8);align-items:center;justify-content:center;}
+    .modal-content{max-width:90%;max-height:90%;border-radius:8px;}
+    .modal img{width:100%;height:auto;}
+    .modal-close{position:absolute;top:20px;right:30px;color:white;font-size:2rem;cursor:pointer;}
+
+    /* ---------- Responsive ---------- */
+    @media (max-width:900px){
+      .sidebar{position:relative;width:100%;height:auto;border:none;display:block;}
+      .topnav{left:0;}
+      .content{margin-left:0;width:100%;padding:90px 18px 40px}
+      .about-wrapper{flex-direction:column;align-items:flex-start;}
+      .about-wrapper img{margin-bottom:15px;}
     }
   </style>
 </head>
-<body class="bg-gray-50 text-gray-900">
+<body>
 
-  <!-- Top Navbar -->
-  <nav class="w-full bg-gray-800 text-white px-6 py-3 flex justify-between items-center">
-    <h1 class="text-xl font-bold">Elnaz Abbasifar</h1>
-    <div class="space-x-4 hidden md:flex">
-      <a href="#about" class="hover:text-gray-300">About</a>
-      <a href="#publications" class="hover:text-gray-300">Publications</a>
-      <a href="#certificates" class="hover:text-gray-300">Certificates</a>
-      <a href="#contact" class="hover:text-gray-300">Contact</a>
-    </div>
-  </nav>
-
-  <div class="flex mobile-col">
-    <!-- Sidebar -->
-    <aside class="sidebar w-1/4 bg-gray-100 p-4">
-      <h2 class="text-lg font-semibold mb-3">Menu</h2>
-      <ul class="space-y-2">
-        <li><a href="#about" class="text-blue-600 hover:underline">About Me</a></li>
-        <li><a href="#publications" class="text-blue-600 hover:underline">Publications</a></li>
-        <li><a href="#certificates" class="text-blue-600 hover:underline">Certificates</a></li>
-        <li><a href="#contact" class="text-blue-600 hover:underline">Contact</a></li>
-      </ul>
+  <div class="layout">
+    <!-- SIDEBAR -->
+    <aside class="sidebar">
+      <div class="sidebar-header">
+        <img class="photo" src="images/profile.jpg" alt="Elnaz Abbasifar">
+      </div>
+      <div class="sidebar-section">
+        <h4>Contact</h4>
+        <ul>
+          <li><strong>Email:</strong> <a href="mailto:e.abbasifar@outlook.com">e.abbasifar@outlook.com</a></li>
+          <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/elnazabbasifar/" target="_blank">linkedin.com/in/elnazabbasifar</a></li>
+          <li><strong>GitHub:</strong> <a href="https://github.com/elnazabbasifar" target="_blank">github.com/elnazabbasifar</a></li>
+        </ul>
+      </div>
+      <div class="sidebar-section">
+        <h4>Skills</h4>
+        <ul>
+          <li><strong>Programming:</strong> Python, C#, SQL</li>
+          <li><strong>Data & ML Libraries:</strong> NumPy, Pandas, Matplotlib, Seaborn, Scikit-learn, PyTorch Geometric</li>
+          <li><strong>Tools & Platforms:</strong> SQL Server, Power BI, Git, Jupyter, Visual Studio, Google Colab</li>
+        </ul>
+      </div>
     </aside>
 
-    <!-- Main Content -->
-    <main class="content w-3/4 p-6">
+    <!-- NAVBAR -->
+    <header class="topnav">
+      <a href="#about">About</a>
+      <a href="#academic">Academic</a>
+      <a href="#publications">Publications</a>
+      <a href="#research">Research</a>
+      <a href="#certificates">Certificates</a>
+      <a href="#projects">Projects</a>
+      <a href="#work">Work</a>
+    </header>
+
+    <!-- CONTENT -->
+    <main class="content">
+
       <!-- About -->
-      <section id="about" class="mb-10">
-        <h2 class="text-2xl font-bold mb-3">About Me</h2>
-        <p>
-          I am Elnaz Abbasifar, a researcher in Computer Science with interests in
-          data science, graph neural networks, and applied machine learning.
-        </p>
-      </section>
-
-      <!-- Publications -->
-      <section id="publications" class="mb-10">
-        <h2 class="text-2xl font-bold mb-3">Publications</h2>
-        <ul class="list-disc pl-5 space-y-2">
-          <li>Publication 1 - Details of the work...</li>
-          <li>Publication 2 - Details of the work...</li>
-          <li>Publication 3 - Details of the work...</li>
-        </ul>
-      </section>
-
-      <!-- Certificates Carousel -->
-      <section id="certificates" class="mb-10">
-        <h2 class="text-2xl font-bold mb-3">Certificates</h2>
-        <div class="certificate-carousel">
-          <div class="certificate-wrapper" id="certificateWrapper">
-            <div class="certificate-slide">
-              <img src="certificates/cert1.jpg" alt="Certificate 1" />
-            </div>
-            <div class="certificate-slide">
-              <img src="certificates/cert2.jpg" alt="Certificate 2" />
-            </div>
-            <div class="certificate-slide">
-              <img src="certificates/cert3.jpg" alt="Certificate 3" />
-            </div>
+      <section id="about" data-aos="fade-up">
+        <h2 class="section-title">About Me</h2>
+        <div class="card about-wrapper">
+          <img src="images/profile.jpg" alt="Elnaz Abbasifar">
+          <div class="about-text">
+            <p>Hello! I’m <strong>Elnaz Abbasifar</strong>, passionate about <b>Machine Learning, Data Science, and Health Informatics</b>.  
+            I enjoy working on real-world problems where data and algorithms intersect with human needs.</p>
+            <p>Beyond academics, I love engaging in collaborative projects, exploring new technologies, and maintaining a dynamic and active lifestyle — qualities that keep me motivated and adaptable in every challenge.</p>
           </div>
-          <button class="carousel-btn left" onclick="prevSlide()">&#10094;</button>
-          <button class="carousel-btn right" onclick="nextSlide()">&#10095;</button>
         </div>
       </section>
 
-      <!-- Contact -->
-      <section id="contact" class="mb-10">
-        <h2 class="text-2xl font-bold mb-3">Contact</h2>
-        <p>Email: elnaz@example.com</p>
+      <!-- Academic -->
+      <section id="academic" data-aos="fade-up">
+        <h2 class="section-title">Academic Background & Training</h2>
+        <div class="card">
+          <ul class="clean">
+            <li><strong>Artificial Intelligence Autumn School</strong>, Amirkabir University of Technology, Iran (2021)</li>
+            <li><strong>Resource-Aware Machine Learning</strong>, TU Dortmund University, Germany (2020)</li>
+            <li><strong>Security of Things (SeThi 2020)</strong>, University of Rostock, Germany (2020)</li>
+            <li><strong>Lviv Data Science Summer School</strong>, Ukrainian Catholic University, Ukraine (2020)</li>
+          </ul>
+        </div>
       </section>
+
+      <!-- Publications -->
+      <section id="publications" data-aos="fade-up">
+        <h2 class="section-title">Publications</h2>
+        <div class="card">
+          <div><b>E. Abbasifar, A. Shayan</b></div>
+          <div class="muted">Impact of Social Network Applications on Customer Trust ... University of Tehran, 2020.</div>
+        </div>
+        <div class="card">
+          <div><b>E. Abbasifar</b></div>
+          <div class="muted">New Applications of Soft Computing in Bioinformatics ... London, UK, 2015.</div>
+        </div>
+      </section>
+
+      <!-- Research -->
+      <section id="research" data-aos="fade-up">
+        <h2 class="section-title">Research Experience</h2>
+        <div class="card">
+          <b>AI Researcher — Technology Studies Institute, Tehran, Iran (2021)</b>
+          <ul class="clean">
+            <li>Comparative analysis of global AI ecosystems, ranking sustainability-related indicators.</li>
+            <li>Collaborated with interdisciplinary scientists across computer science, policy, and management.</li>
+          </ul>
+        </div>
+        <div class="card">
+          <b>Graduate Researcher (Master’s Thesis) — Payame Noor University, Tehran, Iran (2016–2018)</b>
+          <ul class="clean">
+            <li>Conducted research on social network analysis as part of MSc thesis.</li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- Certificates -->
+      <section id="certificates" data-aos="fade-up" style="background:#eef2ff;padding:20px;border-radius:12px;">
+        <h2 class="section-title">Certificates</h2>
+        <div class="carousel" id="carousel">
+          <div class="carousel-track" id="track">
+            <div class="carousel-item"><img src="images/cert1.jpg" alt="Certificate 1"></div>
+            <div class="carousel-item"><img src="images/cert2.jpg" alt="Certificate 2"></div>
+            <div class="carousel-item"><img src="images/cert3.jpg" alt="Certificate 3"></div>
+          </div>
+          <button id="prev" class="carousel-btn left" aria-label="Previous">‹</button>
+          <button id="next" class="carousel-btn right" aria-label="Next">›</button>
+        </div>
+      </section>
+
+      <!-- Projects -->
+      <section id="projects" data-aos="fade-up">
+        <h2 class="section-title">Projects</h2>
+        <div class="card">
+          <b>Tree-Structured Graph Classification with GNN — 2025</b>
+          <div class="muted">PyTorch Geometric for classifying tree graphs.</div>
+        </div>
+      </section>
+
+      <!-- Work -->
+      <section id="work" data-aos="fade-up">
+        <h2 class="section-title">Work Experience</h2>
+        <div class="card">
+          <b>BPM Data Analyst — Pegah Aftab, Tehran, Iran (2021–Present)</b>
+          <ul class="clean"><li>Designed and implemented business processes with C# and React.</li></ul>
+        </div>
+      </section>
+
     </main>
   </div>
 
+  <!-- Modal -->
+  <div class="modal" id="modal">
+    <span class="modal-close" id="modalClose">&times;</span>
+    <div class="modal-content"><img id="modalImg" src="" alt=""></div>
+  </div>
+
+  <!-- Scripts -->
   <script>
-    // Certificates carousel logic
-    const wrapper = document.getElementById('certificateWrapper');
-    const slides = document.querySelectorAll('.certificate-slide');
+    // Certificates Carousel
+    const track = document.getElementById('track');
+    const prev = document.getElementById('prev');
+    const next = document.getElementById('next');
+    const items = document.querySelectorAll('.carousel-item');
     let index = 0;
 
-    function showSlide(i) {
-      if (i >= slides.length) index = 0;
-      else if (i < 0) index = slides.length - 1;
-      else index = i;
-      wrapper.style.transform = `translateX(${-index * 100}%)`;
+    function updateCarousel(){
+      track.style.transform = `translateX(-${index * 100}%)`;
     }
+    prev.addEventListener('click',()=>{ index=(index===0?items.length-1:index-1); updateCarousel(); });
+    next.addEventListener('click',()=>{ index=(index===items.length-1?0:index+1); updateCarousel(); });
+    setInterval(()=>{ index=(index+1)%items.length; updateCarousel(); },5000);
 
-    function nextSlide() { showSlide(index + 1); }
-    function prevSlide() { showSlide(index - 1); }
-
-    // Auto-play
-    setInterval(() => { nextSlide(); }, 4000);
+    // Modal for certificates
+    const modal=document.getElementById('modal');
+    const modalImg=document.getElementById('modalImg');
+    const modalClose=document.getElementById('modalClose');
+    document.querySelectorAll('.carousel-item img').forEach(img=>{
+      img.addEventListener('click',()=>{ modal.style.display="flex"; modalImg.src=img.src; });
+    });
+    modalClose.addEventListener('click',()=>{ modal.style.display="none"; });
+    modal.addEventListener('click',(e)=>{ if(e.target===modal) modal.style.display="none"; });
   </script>
+
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>AOS.init({duration:800,once:true});</script>
+
 </body>
 </html>
